@@ -9,13 +9,6 @@ from django.utils.encoding import force_text
 from django.utils.functional import wraps
 
 
-def _get_field(model, name):
-    if VERSION < (1, 8):
-        return model._meta.get_field_by_name(name)[0]
-    else:
-        return model._meta.get_field(name)
-
-
 def _remote_field(field):
     if VERSION < (1, 9):
         return field.rel
